--- a/Main page.html
+++ b/Main page.html
@@ -85,7 +85,7 @@
             <div class="card-container">
                 <!-- 第一张卡片 -->
                 <div class="card">
-                    <img src="https://thumbnail0.baidupcs.com/thumbnail/99758e618n1a73fbcaa16e19c307a76a?fid=1101147441454-250528-361033037544067&time=1740808800&rt=sh&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-dQ7mfFlTgTWSXt5FN7nF2%2FAqZEQ%3D&expires=8h&chkv=0&chkbd=0&chkpc=&dp-logid=229523470118969140&dp-callid=0&file_type=0&size=c710_u400&quality=100&vuk=-&ft=video" alt="示例图片 1">
+                    <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/f22dcb29c03e04a36eecb250fccdbfbb586d4fb43a3376f69545c1d4c99b86f41edd31b6d2da372dd86ab0f1cd99819e?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1740811210344.jpg&size=750" alt="示例图片 1">
                     <div class="card-content">
                         <h2 class="card-title">班级图片 1</h2>
                         <p class="card-description">暂无描述。</p>
@@ -93,7 +93,7 @@
                 </div>
                 <!-- 第二张卡片 -->
                 <div class="card">
-                    <img src="https://thumbnail0.baidupcs.com/thumbnail/4bd3142famb9e342d1663483c703041f?fid=1101147441454-250528-1034780673240088&time=1740808800&rt=sh&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-oiGHuEemnynTSInRitjNYeZhNks%3D&expires=8h&chkv=0&chkbd=0&chkpc=&dp-logid=229531604170294237&dp-callid=0&file_type=0&size=c710_u400&quality=100&vuk=-&ft=video" alt="示例图片 2">
+                    <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/231267555a864ff38b76cb14f78d3124be646b1c37ac929c1fa529da59ccdb0a98cddf84e294dc57512f38678124d710?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1740811199579.jpg&size=750" alt="示例图片 2">
                     <div class="card-content">
                         <h2 class="card-title">班级图片 2</h2>
                         <p class="card-description">暂无描述。</p>
@@ -101,7 +101,7 @@
                 </div>
                 <!-- 第三张卡片 -->
                 <div class="card">
-                    <img src="https://thumbnail0.baidupcs.com/thumbnail/391259799ocedaa376c05339233d2218?fid=1101147441454-250528-203405445447300&time=1740808800&rt=sh&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-A2frHOPG6PUQ6v6ZkUOfxq2nRiQ%3D&expires=8h&chkv=0&chkbd=0&chkpc=&dp-logid=229560746650612462&dp-callid=0&file_type=0&size=c710_u400&quality=100&vuk=-&ft=video" alt="示例图片 3">
+                    <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/d868ea220930ad157425a7ffaf2c14063e0d13208e382cdd645bf04a963cd8dc144d2dc93541805977cd85f6a3cfbbae?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1740811025198.jpg&size=750" alt="示例图片 3">
                     <div class="card-content">
                         <h2 class="card-title">班级图片 3</h2>
                         <p class="card-description">暂无描述。</p>
@@ -109,7 +109,7 @@
                 </div>
                 <!-- 第四张卡片 -->
                 <div class="card">
-                    <img src="https://thumbnail0.baidupcs.com/thumbnail/5a1287184q9a4416414b1e96a4989c53?fid=1101147441454-250528-647100567741474&time=1740808800&rt=sh&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-ugvP3e%2FAv26%2F2img3RALD78hbMM%3D&expires=8h&chkv=0&chkbd=0&chkpc=&dp-logid=229598551941523040&dp-callid=0&file_type=0&size=c710_u400&quality=100&vuk=-&ft=video" alt="示例图片 4">
+                    <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/1534a9cfd4ed575023c8b6fed699eabae3e44d1b52f2233b48e14e462ad6b7088e717a0b675a47058977af9fb7bfb994?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1740808957422.jpg&size=750" alt="示例图片 4">
                     <div class="card-content">
                         <h2 class="card-title">班级图片 4</h2>
                         <p class="card-description">暂无描述。</p>
@@ -117,7 +117,7 @@
                 </div>
                 <!-- 第五张卡片 -->
                 <div class="card">
-                    <img src="https://thumbnail0.baidupcs.com/thumbnail/7598689d3m980d4018a8279399ef3d5f?fid=1101147441454-250528-1047544148694506&time=1740808800&rt=sh&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-Lo0PNVQp%2BQJuklF6VCxR0OoVhpg%3D&expires=8h&chkv=0&chkbd=0&chkpc=&dp-logid=229659718413562296&dp-callid=0&file_type=0&size=c710_u400&quality=100&vuk=-&ft=video" alt="示例图片 5">
+                    <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/1290a517058bea0aa08a0f875b916ccc08512f1c445d89a9bd1f4b76ad671e252a38385ed7dd743a8751a43066ca5bcf?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1740809750499.jpg&size=750" alt="示例图片 5">
                     <div class="card-content">
                         <h2 class="card-title">班级图片 5</h2>
                         <p class="card-description">暂无描述。</p>
@@ -125,7 +125,7 @@
                 </div>
                 <!-- 第六张卡片 -->
                 <div class="card">
-                    <img src="https://thumbnail0.baidupcs.com/thumbnail/040753bber2e375f616092b6c0fe75d3?fid=1101147441454-250528-180095147847533&time=1740808800&rt=sh&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-v8KkonYx8HZd2YTwzxmEzseF56Q%3D&expires=8h&chkv=0&chkbd=0&chkpc=&dp-logid=229692113358994867&dp-callid=0&file_type=0&size=c710_u400&quality=100&vuk=-&ft=video" alt="示例图片 6">
+                    <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/99d816629a715819777d4ab12e7706fa930567253cba7d8744f67c740f8280f34c314b77dd7559b90c858c6f013febcb?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1740809754350.jpg&size=750" alt="示例图片 6">
                     <div class="card-content">
                         <h2 class="card-title">班级图片 6</h2>
                         <p class="card-description">暂无描述。</p>
