--- a/Main page.html
+++ b/Main page.html
@@ -193,7 +193,7 @@
     <footer class="bg-dark text-light mt-5 py-4">
         <div class="container text-center">
             <p>&copy; 2025 新城中学15班</p>
-            <p>班主任：廖老师 | 班长：尹梓桐</p>
+            <p>班主任：廖老师 | 班长：尹梓彤</p>
         </div>
     </footer>
 
