--- a/Contact Us.html
+++ b/Contact Us.html
@@ -5,7 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>关于我们</title>
+    <link rel="icon" href="./图标.png" type="image/x - icon">
     <link rel="stylesheet" href="contact.css">
+    <script src="./api_ip.js"></script>
+    <style>
+        .message {
+            width: 500px;
+            height: 200px;
+            text-align: center;
+            font-size: 15px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            text-align: center;
+        }
+
+        .sc {
+            width: 500px;
+            height: 30px;
+            margin-top: 20px;
+            border-radius: 5px;
+            text-align: center;
+            margin-top: 10px;
+            background-color: rgb(48, 107, 216);
+            border: 1px solid #ccc;
+            font-size: 15px;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,13 +49,6 @@
             <p><i class="fa-solid fa-phone"></i> 电话：[18926845117]</p>
             <p><i class="fa-solid fa-envelope"></i> 邮箱：[1990939838@qq.com]</p>
         </div>
-        <div class="contact-info">
-            <h1>网站管理员：芒果</h1>
-            <p>部分功能正在制作中，请稍安勿躁</p>
-        </div>
-    </section>
-
-
     <!-- 引入 Font Awesome 图标库 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
 </body>
