--- a/login.html
+++ b/login.html
@@ -4,120 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>安全登录</title>
-    <script src="./server.js"></script>
+    <link rel="icon" href="./图标.png" type="image/x - icon">
+    <script src="./key.js"></script>
     <style>
-        /* 更多请关注CSDN博主-拄杖盲学轻声码 */
-    body {
-        background: url('bgimg.png') no-repeat;
-        background-size: 100% 140%;
-    }
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background: url('./bgimg.png') no-repeat;
+            background-size: cover; /* 确保背景图像覆盖整个容器 */
+        }
+        .login-container {
+            background: rgba(0, 0, 0, 0.6);	/*rgba设置透明层*/
+            background-color: #00000060;	/*八位颜色位设置透明层*/
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            text-align: center;
+        }
+        input {
+            width: calc(100% - 22px);
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            background-color: #4285f4;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #007bff;
+        }
+        .message {
+            color: red;
+            margin-top: 10px;
+        }
 
-    #login_box { /*登录框*/
-      width: 20%;
-      height: 300px;
-      background: rgba(0, 0, 0, 0.6);
-      /*rgba设置透明层*/
-      background-color: #00000060;
-      /*八位颜色位设置透明层*/
-      margin: auto;
-      margin-top: 10%;
-      text-align: center;
-      border-radius: 10px;
-      padding: 50px 50px;
-    }
-
-    h2 {
-      color: #ffffff90;
-      margin-top: 5%;
-    }
-
-    #input-box {
-      margin-top: 5%; /*输入框*/
-    }
-
-    span {
-      color: #fff;
-    }
-
-    input { /*输入框*/
-      border: 0;
-      width: 60%;
-      font-size: 15px;
-      color: #fff;
-      background: transparent;
-      border-bottom: 2px solid #fff;
-      padding: 5px 10px;
-      outline: none;
-      margin-top: 10px;
-    }
-
-    button { /*登录按钮*/
-      margin-top: 50px;
-      width: 100%;
-      height: 40px;
-      border-radius: 10px;
-      border: 0;
-      color: #fff;
-      text-align: center;
-      line-height: 30px;
-      font-size: 15px;
-      background-image: linear-gradient(to right, #30cfd0, #330867);
-    }
-
-    #sign_up { /*注册*/
-      margin-top: 45%;
-      margin-left: 60%;
-    }
-
-    a {
-      color: #b94648;
-    }
+        h2 {
+            color: white;
+        }
     </style>
 </head>
 <body>
-    <div id="login_box">
-        <h2>LOGIN</h2>
-        <div id="input_box">
-          <input type="text" placeholder="请输入用户名" id="username">
-        </div>
-        <div class="input_box">
-          <input type="password" placeholder="请输入密码" id="password">
-        </div>
-        <button onclick="login()">登录</button><br>
-      </div>
-
-      <script>
-        async function login() {
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-            const messageElement = document.getElementById('message');
-
-            if (!username || !password) {
-                messageElement.textContent = "请输入用户名和密码！";
-                return;
-            }
-
-            try {
-                const response = await fetch('/api/login', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ username, password })
-                });
-
-                const result = await response.json();
-
-                if (result.success) {
-                    messageElement.textContent = "登录成功！";
-                    messageElement.style.color = "green";
-                } else {
-                    messageElement.textContent = result.message || "用户名或密码错误！";
-                }
-            } catch (error) {
-                messageElement.textContent = "登录失败，请稍后重试！";
-            }
-        }
-    </script>
+    <div class="login-container">
+        <h2>Login</h2>
+        <form id="loginForm">
+            <input type="text" placeholder="Username" id="username" required>
+            <input type="password" placeholder="Password" id="password" required>
+            <button type="button" class="login-button" onclick="getLoginStatus();validateCredentials()">Login</button>
+            <div class="message" id="message"></div>
+        </form>
+    </div>
 </body>
 </html>
