--- a/Main page.html
+++ b/Main page.html
@@ -164,7 +164,7 @@
                     <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/e722c165299de74cf08b8383129b14b4a5c3aaa368f53f4aa36af311fe2981302dec1eca727a4615c0fa87eaed4e83d5?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1741405633704.jpg&size=750" alt="示例图片 8">
                     <div class="card-content">
                         <h2 class="card-title">班级图片 8</h2>
-                        <p class="card-description">来自叶浩峰：缝对手，遇良将，快哉快哉！。</p>
+                        <p class="card-description">叶浩峰：逢对手，遇良将，快哉快哉！</p>
                     </div>
                 </div>
                 <!-- 第九张卡片 -->
