--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: url('./bgimg.png') no-repeat;
+            background: url('https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/b23baae3a40bc5454922bfc2ad1a2ab2eb7aee0249bc5a8ca706c8aa81d5e76f86f343cca2e79156dda544edc2073d70?pictype=scale&from=30113&version=3.3.3.3&fname=bgimg.png&size=750') no-repeat;
             background-size: cover; /* 确保背景图像覆盖整个容器 */
         }
         .login-container {
