--- a/photo album.html
+++ b/photo album.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="./图标.png" type="image/x - icon">
   <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./Main page.css">
+  <title>同学相册</title>
   <style>
 /* 设置页面整体样式 */
 body {
