--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
         <form id="loginForm">
             <input type="text" placeholder="Username" id="username" required>
             <input type="password" placeholder="Password" id="password" required>
-            <button type="button" class="login-button" onclick="getLoginStatus();validateCredentials()">Login</button>
+            <button type="button" class="login-button" onclick="getLoginStatus();validateCredentials()">登录</button>
             <div class="message" id="message"></div>
         </form>
     </div>
