--- a/Contact Us.html
+++ b/Contact Us.html
@@ -30,6 +30,10 @@
             border: 1px solid #ccc;
             font-size: 15px;
         }
+
+        img {
+            border-radius: 10px;
+        }
     </style>
 </head>
 
@@ -48,6 +52,8 @@
             <p><i class="fa-solid fa-location-dot"></i> 地址：[新城学校]</p>
             <p><i class="fa-solid fa-phone"></i> 电话：[18926845117]</p>
             <p><i class="fa-solid fa-envelope"></i> 邮箱：[1990939838@qq.com]</p>
+            <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/b75bd34af0c2dc760244e31cf23482c28ed260267dcd7781db6793ec2f8e0c1da20b744a8ff1be650dcb628d828e5b41?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1741184441916.jpg&size=750" alt="" width="200" height="200">
+            <p>By：揽月不辞万里</p>
         </div>
     <!-- 引入 Font Awesome 图标库 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
