--- a/Main page.html
+++ b/Main page.html
@@ -94,7 +94,7 @@
                         <ul class="list-group">
                             <li class="list-group-item">第六周星期四百日誓师</li>
                             <li class="list-group-item">第七周一模生地考试<span id="exam-countdown"></span></li>
-                            <li class="list-group-item">第五周大课间评比开始</li>
+                            <li class="list-group-item">第五周大课间评比结束</li>
                             <li class="list-group-item">第十三周二模生地考试</li>
                         </ul>
                     </div>
@@ -197,14 +197,14 @@
                 <div class="card">
                     <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/f0649c2fe588749fe8c6abd88fdb7b0897201621152bd4c9df8f4f86d69b5df49d162c309c7b619e48a1f34f67b5bce7?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1741347208411.jpg&size=750" alt="更多图片 1">
                     <div class="card-content">
-                        <h2 class="card-title">更多图片 1</h2>
+                        <h2 class="card-title">班级图片 10</h2>
                         <p class="card-description">暂无描述。</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="https://picabstract-preview-ftn.weiyun.com/ftn_pic_abs_v3/ac4d50fe451f1b9324ab6dbb861a592acc2b2d54161a52c99375f7126e9f1192a202214cd4444616a94faff092e1d27d?pictype=scale&from=30113&version=3.3.3.3&fname=mmexport1741792491098.jpg&size=750" alt="更多图片 2">
                     <div class="card-content">
-                        <h2 class="card-title">更多图片 2</h2>
+                        <h2 class="card-title">班级图片 11</h2>
                         <p class="card-description">暂无描述。</p>
                     </div>
                 </div>
@@ -296,6 +296,8 @@
     <li>学风：乐学 善问 笃行 求真</li>
   </ol>
 </div>
+
+
 
 <div id="weather"></div>
 <script>
