--- a/sponsor.html
+++ b/sponsor.html
@@ -189,7 +189,7 @@ img {
         <div class="sponsor-section">
             <h2>成为赞助商</h2>
             <p>作为赞助商，您的身份将获得广泛的曝光机会，并为我们的项目提供重要支持。我们提供多种赞助方案，满足不同需求。</p>
-            <p>若您已向我们支付了赞助金，请联系我们可查看更多照片</p>
+            <p>若您已向我们支付了赞助金，请联系我们可查看更多私人照片</p>
         </div>
         
         <div class="sponsor-section">
