--- a/Main page.html
+++ b/Main page.html
@@ -237,7 +237,7 @@
                     </video>
                     <div class="card-content">
                         <h2 class="card-title">班级视频 8</h2>
-                        <p class="card-description">生地中考加油。视频源自@尹梓彤</p>
+                        <p class="card-description">生地中考加油。视频源自@陈曼熙</p>
                     </div>
                 </div>
                 <!-- 第九张卡片 -->
