--- a/Main page.html
+++ b/Main page.html
@@ -91,7 +91,7 @@
                     <li class="nav-item"><a class="nav-link" href="#gallery">班级相册</a></li>
                     <li class="nav-item"><a class="nav-link" href="./Contact Us.html">关于我们</a></li>
                     <li class="nav-item">
-                        <audio controls style="height: 30px; width: 260px; margin-top: 5px;">
+                        <audio controls style="height: 30px; width: 260px; margin-top: 5px;" preload="auto">
                             <source src="./TFBOYS+-+为梦想,时刻准备着.mp3" type="audio/mpeg">
                             您的浏览器不支持音频播放
                         </audio>
